crates/courier-ftp-proto-ftp/tests/snapshots/listing__listing_fixtures_snapshot@mixed__cp1252-auto.txt.snap
---
source: crates/courier-ftp-proto-ftp/tests/listing.rs
expression: snapshot(&parsed)
input_file: crates/courier-ftp-proto-ftp/tests/listings/mixed/cp1252-auto.txt
---
format: dos
used_fallback_encoding: true
skipped_count: 0
entries:
  - name: café.txt
    kind: file
    size: 10
    modified: "2024-01-31T12:00:00Z (Minute)"
    permissions: rw-r--r-- (644)
    owner: alice
    group: staff
    hidden: false
  - name: naïve.txt
    kind: file
    size: 1
    modified: "2024-01-31T12:00:00Z (Minute)"
    permissions: ~
    owner: ~
    group: ~
    hidden: false
skipped: []
